# memoria-vault

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Home.md  LICENSE  README.md  SECURITY.md  _audit.py  _inbound.txt  archive-distillation-report.md  cspell.json  install.ps1  install.sh  package-lock.json  package.json  project-words.txt  pyproject.toml  references.bib  release-please-config.json  requirements-dev.txt  ruff.toml
.agents/: README.md  toolkit.md
.agents/playbooks/: code-review.md  design-history.md  docs-audit.md  docs-review.md  exec-plan.md  release.md  security-review.md  verify-change.md
.agents/system/: change-impact-map.md  change-impact.yaml  docs-manifest.yaml  profile-policy-matrix.md  source-of-truth-map.md  test-selection.md
.agents/templates/: exec-plan.md  handoff.md  release-plan.md  review-report.md
.claude/: settings.json  settings.local.json
.cspell/: project-words.txt
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml  ruleset-contract.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/markdownlint/: docs-md056.json
.github/scripts/: pr_policy.py
.github/workflows/: check-test-refs.yml  cspell.yml  dependabot-auto-merge.yml  docs-doctor.yml  docs-link-audit.yml  docs-links.yml  gitleaks.yml  harper.yml  hermes-version-check.yml  lint-config.yml  lint-installers.yml  lint.yml  markdownlint-tables.yml  markdownlint.yml  pr-review-gate.yml  python-selftest.yml  release-please.yml  release.yml  ruff.yml  ruleset-audit.yml  verify.yml
.memoria/lane-overrides/: librarian.yaml  mapper.yaml  socratic.yaml
.memoria/schemas/: README.md
.notes/: TODO-archive-2026-06-04.md  TODO.md  repos  resume-checklist.md  resume.md
.obsidian/snippets/: memoria-link-colors.css
00-meta/: index.md  system-status.md
00-meta/01-dashboards/: audit-log.md  board-state.md  discuss-queue.md  drift-watch.md  fleet-health.md  fleet-observability.md  index.md  loose-ends.md  (+5 more)
catalog/: index.md
design-history/: 00-origins.md  01-alpha.1-baseline.md  02-alpha.2.md  03-alpha.3.md  04-alpha.4.md  05-alpha.5.md  06-alpha.6.md  07-alpha.7.md  08-alpha.8.md  09-alpha.9.md  10-alpha.10.md  11-alpha.11.md  12-alpha.12.md  13-alpha.13.md  14-alpha.14.md  15-alpha.15.md  16-alpha.16.md  17-alpha.17.md  18-alpha.18.md  19-alpha.19.md  20-alpha.20.md  21-alpha.21.md  README.md  arcs.md  exec-plan-living-design-history.md  memoria-design-history-alpha.1-to-alpha.15.md
docs/: README.md  _config.yml  design-book.md  developers.md  index.md  operator-guide.md  runtime-spec.md  the-model.md
docs2/: README.md
hci-course/: project-ideas.md
journal/: capture-machine.jsonl  copi-machine.jsonl  curator.jsonl  cycle-machine.jsonl  digest-machine.jsonl  integrity-machine.jsonl  note-machine.jsonl  op-machine.jsonl  pi-machine.jsonl  seeded-capture.jsonl  seeded-digest.jsonl  seeded-gate.jsonl  seeded-notes.jsonl  seeded-source.jsonl  test-machine.jsonl
knowledge/: index.md
memoria/: __init__.py
memoria-data-structure/: data-structure-analysis.md  query-mechanism-analysis.md
project/: Memoria_GitHub_Workflow_Guide.md  README.md  git-workflow.md  process.md
project-files/: README.md  implementation-status.md
scripts/: PSScriptAnalyzerSettings.psd1  adr_code_doctor.py  agents-doctor.py  agents_doctor.py  alpha14_negative_gate.py  alpha15_dogfood_checkpoint.py  check-doc-refs.sh  check-test-refs.py  check-vault-links.sh  check_live_docs_links.py  check_test_refs.py  checked_terminology_gate.py  dev-setup.sh  docs-doctor.py  docs_doctor.py  e2e-smoke.sh  e2e_smoke.py  gen-adr-index.py  gen-forms.py  gen_adr_index.py  gen_profiles_ref.py  gen_reference_refs.py  github_doctor.py  gitleaks_precommit.py  harper-advisory.sh  install-test-vault-local-llm.sh  install.ps1  install.sh  l2_obsidian_mcp_shim.py  l2_openai_smoke_server.py  l2_smoke.py  plugin_provenance_doctor.py  qmd-codebase-index.sh  qmd-install-hooks.sh  refresh-test-vault.sh  render_profile_configs.py  ruleset_doctor.py  status-doctor.py  status_doctor.py  test-l2.sh  (+3 more)
src/: .gitignore  AGENTS.md  AGENTS.override.md  _nav.md  home.md  research-focus.md  troubleshooting.md
tests/: README.md  _util.py  cli_test_helpers.py  conftest.py  floor_lib.py  helpers.py  ingest_fixtures.py  test_actor_threading.py  test_adr_code_doctor.py  test_agents_doctor.py  test_alpha11_cycle.py  test_alpha12_state.py  test_alpha13_enrichment.py  test_alpha14_runtime_gate.py  test_alpha15_dogfood_checkpoint.py  test_alpha15_runtime_gate.py  test_alpha17_draft_compose.py  test_alpha17_evidence_markers.py  test_alpha17_evidence_sets.py  test_alpha17_exploration.py  test_alpha17_gate_calibration.py  test_alpha17_slice_outline.py  test_alpha17_verification.py  test_alpha17_writeback.py  test_alpha18_bundle_roots.py  test_alpha18_concept_types.py  test_alpha18_frontmatter.py  test_alpha18_gap_freejoin.py  test_alpha18_renames.py  test_alpha18_schema_doc_lint.py  test_alpha18_schema_version.py  test_alpha19_query_substrate.py  test_backup_restore.py  test_bases.py  test_board_export.py  test_bundle_roots.py  test_capabilities.py  test_capture.py  test_check_test_refs.py  test_classify.py  (+135 more)
vault/: .gitignore  Home.md  README.md  home.md  install.ps1  install.sh  research-directions.md  research-focus.md  troubleshooting.md
vault-template/: .gitignore  AGENTS.md  AGENTS.override.md  _nav.md  home.md  index.md  steering.md  troubleshooting.md
workflow-audit/: architecture-review.md  autoresearch-note.md  blind-spots-review.md  decisions-adopt-superpowers.md  exec-plan-adopt-superpowers.md  exec-plan-hermetic-dev-toolchain.md  exec-plan-living-design-history.md  exec-plan-project-layout.md  harness-goal-audit.md  insights.md  okf-note.md  product-statement.md  promise-audit.md  roadmap.md  schema-analysis.md  superpowers-alignment-plan.md  user-workflow.md
(+2871 files in other folders)
