[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memoria-vault"
version = "0.1.0a10"
description = "Memoria vault runtime and tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Eran Roseman" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["memoria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src/.memoria",
  "src/.memoria/mcp",
  "scripts",
  ".github/scripts",
]

[tool.ruff]
# Width is owned by the formatter (`ruff format`), not the E501 lint rule. 100 is
# the deliberate choice: ~96% of lines already fit in 88, the genuinely long lines
# are unsplittable string literals (argparse help, prompt/error text) the formatter
# leaves alone, and 100 wraps only the long expressions that actually benefit while
# leaving comfortable 88-100 one-liners intact.
line-length = 100

[tool.ruff.format]
# `ruff format` is the single source of truth for layout so style never drifts
# across the many agent sessions that generate this code. docstring-code-format
# keeps fenced code inside docstrings formatted too.
docstring-code-format = true

[tool.ruff.lint]
# Curated, high-signal rule set for an agent-generated codebase: catch real bugs,
# enforce the consistency the formatter cannot (imports, idioms), and modernize.
# Layout is the formatter's job, so style-only rules stay off.
#
#   F    pyflakes -- undefined names, unused imports (non-negotiable)
#   E4/E7/E9  the real-error pycodestyle subset (imports, statements, syntax)
#   W    pycodestyle warnings (invalid escapes, ...)
#   B    flake8-bugbear -- likely bugs (mutable defaults, except ordering, ...)
#   I    import sorting (isort) -- the formatter does NOT do this
#   UP   pyupgrade -- modern syntax for the target Python (py311)
#   C4   flake8-comprehensions -- clearer/faster comprehensions
#   PIE  flake8-pie -- misc small correctness/clarity rules
#   RUF  ruff-specific (mutable class defaults, unused noqa, ...)
#   A    flake8-builtins -- shadowing id/type/list/dict, a common agent mistake
#   PT   flake8-pytest-style -- consistency across the test suite
#   DTZ  flake8-datetimez -- naive-datetime bugs (pairs with the UP017 migration)
#   FLY  flynt -- static str.join -> f-string
#   BLE  flake8-blind-except -- no swallowing errors behind bare/broad except
#   S    flake8-bandit -- the real subprocess/network surface (off in tests)
#   RET  flake8-return -- unnecessary else-after-return and friends
#
# Deliberately OFF: E1/E2/E3, W291/293, E501, COM, ISC, Q -- the formatter owns
# layout (COM/ISC actively conflict with it). T20 (print is intentional in CLI),
# LOG/G (no logging), PTH (already 100% pathlib), ANN/D (docstring presence is a judgement call, not a lint gate — see AGENTS.md §Python style),
# SIM/PERF/FURB (opinionated terseness-over-clarity refactors).
select = [
  "F", "E4", "E7", "E9", "W", "B", "I", "UP", "C4", "PIE", "RUF",
  "A", "PT", "DTZ", "FLY", "BLE", "S", "RET",
]
ignore = [
  "E731",    # lambda-to-name -- idiomatic for concise test helpers.
  "PT018",   # composite assert -- splitting `assert a and b` is cosmetic churn.
  # PT011/PT017 assume the pytest.raises idiom, but this suite deliberately uses a
  # pytest-independent try/except/else style so tests run under both pytest and the
  # ADR-44 CheckHarness (most test files do not import pytest).
  "PT011",   # pytest.raises without match=.
  "PT017",   # assertion on the exception inside an except block.
  # The bandit (S) subrules below are threat-model misfits for a local,
  # single-user CLI tool (no untrusted remote input). The high-value S rules
  # (deserialization, eval/exec, SQL/yaml/xml injection) stay enabled.
  "S603",    # subprocess call -- args are statically constructed, not untrusted.
  "S607",    # partial executable path -- we call git/npx/ollama via PATH on purpose.
  "S310",    # urlopen -- URLs are built from fixed HTTPS API bases, not user input.
  "S311",    # non-crypto random -- used only for sampling/jitter, never for secrets.
  "DTZ011",  # date.today() -- local-date semantics are intended for a single-user vault.
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert and run trusted subprocesses; bandit there is noise.
# E402: test helpers do sys.path manipulation before imports.
"tests/**" = ["S", "E402"]
# The e2e smoke harness uses assert as its assertion mechanism, like the tests.
"scripts/e2e_smoke.py" = ["S101"]
# src/.memoria scripts run with a custom sys.path set before imports.
"src/.memoria/**" = ["E402"]
"scripts/**" = ["E402"]
# board_export re-exports symbols via __all__; F401 fires falsely on those imports.
"src/.memoria/mcp/board_export.py" = ["E402", "F401"]
